Add: tint, shade to primitiveColors

--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -531,6 +531,150 @@ import PaglinawanLogo from "./images/paglinawan.svg";
           </li>
         </ul>
       </details>
+      <details open>
+        <summary class="list-none flex items-center gap-2 font-semibold text-lg border-0 cursor-pointer">
+          Tint
+        </summary>
+        <ul class="flex flex-wrap gap-4 mt-2">
+          <li class="relative w-8 h-8 rounded-full bg-cl-tint-0 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              0
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-tint-50 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              50
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-tint-100 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              100
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-tint-150 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              150
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-tint-200 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              200
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-tint-300 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              300
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-tint-400 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              400
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-tint-500 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              500
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-tint-600 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              600
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-tint-700 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              700
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-tint-800 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              800
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-tint-900 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              900
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-tint-950 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              950
+            </div>
+          </li>
+        </ul>
+      </details>
+      <details open>
+        <summary class="list-none flex items-center gap-2 font-semibold text-lg border-0 cursor-pointer">
+          Shade
+        </summary>
+        <ul class="flex flex-wrap gap-4 mt-2">
+          <li class="relative w-8 h-8 rounded-full bg-cl-shade-0 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              0
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-shade-50 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              50
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-shade-100 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              100
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-shade-150 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              150
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-shade-200 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              200
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-shade-300 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              300
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-shade-400 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              400
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-shade-500 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              500
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-shade-600 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              600
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-shade-700 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              700
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-shade-800 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              800
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-shade-900 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              900
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-shade-950 transition-transform hover:scale-110 hover:shadow-lg hover:shadow-slate-500/50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              950
+            </div>
+          </li>
+        </ul>
+      </details>
     </div>
   </section>
   <footer class="flex gap-4 mt-10 pt-3 border-t border-cl-neutral-800">
